# DarkMatter

./: .dockerignore  .gitignore  .plan.md  Dockerfile  LICENSE  README.md  SPEC.md  anchor.py  docker-compose.test.yml  entrypoint.py  install.sh  pyproject.toml  requirements.txt  server.py  test_crypto_addon.py  test_discovery.py  test_docker.sh  test_docker_network.py  test_economy.py  test_identity.py  test_installer.py  test_network.py  test_security.py  test_state.py
.claude/skills/darkmatter-ops/: SKILL.md
.claude/skills/darkmatter-wallet/: SKILL.md
.github/workflows/: publish.yml
agent_test/agent_alpha/: CLAUDE.md
agent_test/agent_beta/: CLAUDE.md
darkmatter/: __init__.py  __main__.py  adapters.py  app.py  bootstrap.py  cli.py  config.py  context.py  entrypoint_init.py  extensions.py  filelock.py  genome.py  identity.py  insight_resolver.py  installer.py  logging.py  models.py  names.py  pool.py  router.py  sandbox.py  security.py  shard_resolver.py  spawn.py  state.py  trust.py
darkmatter/bundled/: entrypoint.py
darkmatter/bundled/templates/: base.html  chat.html
darkmatter/bundled/templates/entrypoint/: chat.html  wallet_sign.html
darkmatter/hooks/: __init__.py  keepalive.py  opencode_plugin.js
darkmatter/mcp/: __init__.py  channel.py  schemas.py  tools.py  visibility.py
darkmatter/network/: __init__.py  access.py  discovery.py  manager.py  mesh.py  resilience.py  tier.py  transport.py  webrtc.py
darkmatter/network/transports/: __init__.py  anchor_relay.py  http.py  webrtc.py
darkmatter/wallet/: __init__.py  antimatter.py  gas.py  solana.py
promo/: darkmatter-intro.html
prompts/: antimatter-explainer.md
skills/darkmatter/: SKILL.md
templates/: chat.html
templates/entrypoint/: base.html  chat.html  pin_login.html
