[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmagent"
dynamic = ["version"]
description = "DarkMatter — self-organizing mesh networks for AI agents via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Losey", email = "daniel@loseylabs.ai" },
]
keywords = ["mcp", "ai", "agents", "mesh", "network", "darkmatter", "p2p"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "cryptography>=42.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
    "solana>=0.34.0",
    "solders>=0.21.0",
]

[project.optional-dependencies]
webrtc = ["aiortc>=1.9.0"]
upnp = ["miniupnpc>=2.2.0"]
all = ["dmagent[webrtc,upnp]"]

[project.scripts]
darkmatter = "darkmatter.app:main"

[project.urls]
Homepage = "https://github.com/dadukhankevin/DarkMatter"
Repository = "https://github.com/dadukhankevin/DarkMatter"
Issues = "https://github.com/dadukhankevin/DarkMatter/issues"

[tool.hatch.version]
path = "darkmatter/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "darkmatter/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["darkmatter"]
